# pico-watch

./: .gitignore  CMakeLists.txt  LICENSE  api.cpp  api.hpp  app_manager.cpp  app_manager.hpp  base_app.hpp  buttons.c  buttons.cpp  buttons.h  buttons.hpp  globals.hpp  init.c  init.cpp  init.h  init.hpp  pico-watch.c  pico-watch.cpp  readme.md
app/: app_manager.cpp  app_manager.hpp  base_app.hpp
apps/: home_menu.c  home_menu.cpp  home_menu.h  home_menu.hpp  main_clock.c  main_clock.cpp  main_clock.h  main_clock.hpp
apps/game_falldown/: ball.cpp  ball.hpp  main.cpp  main.hpp  platform.cpp  platform.hpp
apps/home_menu/: main.cpp  main.hpp
apps/main_clock/: main.cpp  main.hpp
apps/settings/: main.cpp  main.hpp  strings-undef.hpp  strings.hpp
apps/tests/: main.cpp  main.hpp
docs/: apps.md  list_widget.md  todo.md
hal/: api.cpp  api.hpp
hal/ui/widget/: base_widget.hpp  list_widget.cpp  list_widget.hpp
oled/: BitBang_I2C.c  CMakeLists.txt  ss_oled.c  ss_oled.h
